--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ html {
   overflow-x: hidden;
   font-family: "Outfit", sans-serif;
 }
+
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, and Opera */
+}
