--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,9 @@ html {
 .scrollbar-hide::-webkit-scrollbar {
   display: none; /* Chrome, Safari, and Opera */
 }
+
+@layer components {
+  .projectHeading {
+    @apply text-3xl lg:text-5xl text-primary font-semibold uppercase;
+  }
+}
